crates/wesl-test/tests/snapshots/testsuite__wgpu__out__glsl-global-constant-array.frag.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@fragment
fn main() {
    return;
}

fn main_1() {

}
