crates/wesl-test/tests/snapshots/testsuite__wgpu__out__glsl-local-var-init-in-loop.comp.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@compute @workgroup_size(1, 1, 1)
fn main() {
    return;
}

fn main_1() {

}
