crates/wesl-test/tests/snapshots/testsuite__wgpu__out__wgsl-multiview.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@fragment
fn main(@builtin(view_index) view_index: i32) {
    return;
}
